--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/logo/zooLogoOnlyAnimalsWhite.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Zoo</title>
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
